--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +20,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bb5a1f522a.js" crossorigin="anonymous"></script>
     <title>Yao_Photographer</title>
 </head>
 
@@ -36,13 +40,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">主頁<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#intro">主頁<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">最新活動</a>
+                            <a class="nav-link" href="#second">攝影師介紹</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">常見問題</a>
+                            <a class="nav-link" href="#last">最新活動</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">聯絡我們</a>
@@ -54,7 +58,7 @@
     </header>
 
     <section id='intro'>
-        <div class="jumbotron">
+        <div class="jumbotron" style="background-image: url('img/banner-4.jpg');">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -71,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center">
-                    <h2>曜攝影．要攝影</h2>
+                    <h2>攝影師介紹</h2>
                     <div class="row">
                         <div class="col-md-4">
                             <img src="img/Yao.jpg" class="rounded-circle">
@@ -81,7 +85,8 @@
                             <h3>你好！我是台中攝影師</h3>
                             <p>攝影主要部份是街道外拍、日系風格、汽機車人像攝影都可以找我合作、邀約這邊也想找造型師一起學習、合作互惠合作或收費都可以</p>
                             <p>地點台中為主偶爾在新竹作品集IG搜尋yao_photographer
-                            <a href="https://www.instagram.com/yao_photographer/"target="_blank"><img src="img/IG.png" style="width:30px; height:30px;"></a>
+                                <a href="https://www.instagram.com/yao_photographer/" target="_blank"><img
+                                        src="img/IG.png" style="width:30px; height:30px;"></a>
                             </p>
                         </div>
                     </div>
@@ -99,28 +104,37 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <a href="#" class="card-text">KAGO產品Model外拍</a><p>日期:六月三日</p>
+                    <a href="#" class="card-text">
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <i class="fa-solid fa-camera" style="margin-right:5px;"></i>KAGO產品Model外拍<br>
+                                <span><i class="fa-regular fa-clock" style="margin-right:5px;"></i>2022/6/3</span>
+                            </div>
                         </div>
-                      </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a href="#" class="card-text">KAGO產品Model外拍</a><p>日期:六月三日</p>
+                    <a href="#" class="card-text">
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <i class="fa-solid fa-camera" style="margin-right:5px;"></i>KAGO產品Model外拍<br>
+                                <span><i class="fa-regular fa-clock" style="margin-right:5px;"></i>2022/6/3</span>
+                            </div>
                         </div>
-                      </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a href="#" class="card-text">KAGO產品Model外拍</a><p>日期:六月三日</p>
+                    <a href="#" class="card-text">
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/album01/0603 (41 - 44).jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <i class="fa-solid fa-camera" style="margin-right:5px;"></i>KAGO產品Model外拍<br>
+                                <span><i class="fa-regular fa-clock" style="margin-right:5px;"></i>2022/6/3</span>
+                            </div>
                         </div>
-                      </div>
+                    </a>
                 </div>
             </div>
         </div>
